--- a/residencia.ipynb
+++ b/residencia.ipynb
@@ -1553,7 +1553,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print df['status'].value_counts()\n",
+    "N    14\n",
+    "S     4\n",
+    "C     2\n",
+    "Name: status, dtype: int64\n",
+    "\n",
+    "counts = df['status'].value_counts().to_dict()\n",
+    "print counts\n",
+    "{'S': 4, 'C': 2, 'N': 14}"
+   ]
   }
  ],
  "metadata": {
@@ -1572,7 +1582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
