--- a/savio_regressao_logistica.ipynb
+++ b/savio_regressao_logistica.ipynb
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -1907,78 +1907,78 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.666671</td>\n",
-       "      <td>0.380060</td>\n",
-       "      <td>0.897959</td>\n",
-       "      <td>0.056594</td>\n",
-       "      <td>0.298258</td>\n",
-       "      <td>0.230238</td>\n",
-       "      <td>0.620690</td>\n",
-       "      <td>0.112179</td>\n",
-       "      <td>0.353846</td>\n",
+       "      <td>0.524876</td>\n",
+       "      <td>0.426888</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.130444</td>\n",
+       "      <td>0.208362</td>\n",
+       "      <td>0.285759</td>\n",
+       "      <td>0.224138</td>\n",
+       "      <td>0.023397</td>\n",
+       "      <td>0.630769</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.645926</td>\n",
-       "      <td>0.302115</td>\n",
-       "      <td>0.897959</td>\n",
+       "      <td>0.706338</td>\n",
+       "      <td>0.558912</td>\n",
+       "      <td>0.938776</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.103136</td>\n",
-       "      <td>0.301757</td>\n",
-       "      <td>0.517241</td>\n",
-       "      <td>0.048077</td>\n",
-       "      <td>0.553846</td>\n",
+       "      <td>0.296864</td>\n",
+       "      <td>0.370765</td>\n",
+       "      <td>0.172414</td>\n",
+       "      <td>0.128205</td>\n",
+       "      <td>0.492308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.543702</td>\n",
-       "      <td>0.646526</td>\n",
-       "      <td>0.673469</td>\n",
-       "      <td>0.617773</td>\n",
-       "      <td>0.124739</td>\n",
-       "      <td>0.318695</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.358974</td>\n",
-       "      <td>0.384615</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.457207</td>\n",
+       "      <td>0.720242</td>\n",
+       "      <td>0.714286</td>\n",
+       "      <td>0.041919</td>\n",
+       "      <td>0.222300</td>\n",
+       "      <td>0.397114</td>\n",
+       "      <td>0.896552</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.861538</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.440334</td>\n",
-       "      <td>0.616918</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>0.178205</td>\n",
-       "      <td>0.311498</td>\n",
-       "      <td>0.342535</td>\n",
-       "      <td>0.362069</td>\n",
-       "      <td>0.216346</td>\n",
-       "      <td>0.615385</td>\n",
+       "      <td>0.153273</td>\n",
+       "      <td>0.032024</td>\n",
+       "      <td>0.040816</td>\n",
+       "      <td>0.013996</td>\n",
+       "      <td>0.058537</td>\n",
+       "      <td>0.231179</td>\n",
+       "      <td>0.241379</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.676923</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.584471</td>\n",
-       "      <td>0.443202</td>\n",
-       "      <td>0.938776</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.283624</td>\n",
-       "      <td>0.267252</td>\n",
-       "      <td>0.189655</td>\n",
-       "      <td>0.496795</td>\n",
-       "      <td>0.507692</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.279637</td>\n",
+       "      <td>0.451360</td>\n",
+       "      <td>0.469388</td>\n",
+       "      <td>0.068483</td>\n",
+       "      <td>0.231359</td>\n",
+       "      <td>0.393036</td>\n",
+       "      <td>0.327586</td>\n",
+       "      <td>0.014423</td>\n",
+       "      <td>0.430769</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1986,21 +1986,21 @@
       ],
       "text/plain": [
        "   Absent  Predito  Present  Probabilidade  adiposity       age   alcohol  \\\n",
-       "0       0        1        1       0.666671   0.380060  0.897959  0.056594   \n",
-       "1       0        1        1       0.645926   0.302115  0.897959  0.000000   \n",
-       "2       1        1        0       0.543702   0.646526  0.673469  0.617773   \n",
-       "3       1        0        0       0.440334   0.616918  0.571429  0.178205   \n",
-       "4       1        1        0       0.584471   0.443202  0.938776  0.000000   \n",
+       "0       1        1        0       0.524876   0.426888  1.000000  0.130444   \n",
+       "1       0        1        1       0.706338   0.558912  0.938776  0.000000   \n",
+       "2       1        0        0       0.457207   0.720242  0.714286  0.041919   \n",
+       "3       1        0        0       0.153273   0.032024  0.040816  0.013996   \n",
+       "4       1        0        0       0.279637   0.451360  0.469388  0.068483   \n",
        "\n",
        "        ldl   obesity       sbp   tobacco     typea  \n",
-       "0  0.298258  0.230238  0.620690  0.112179  0.353846  \n",
-       "1  0.103136  0.301757  0.517241  0.048077  0.553846  \n",
-       "2  0.124739  0.318695  1.000000  0.358974  0.384615  \n",
-       "3  0.311498  0.342535  0.362069  0.216346  0.615385  \n",
-       "4  0.283624  0.267252  0.189655  0.496795  0.507692  "
+       "0  0.208362  0.285759  0.224138  0.023397  0.630769  \n",
+       "1  0.296864  0.370765  0.172414  0.128205  0.492308  \n",
+       "2  0.222300  0.397114  0.896552  0.000000  0.861538  \n",
+       "3  0.058537  0.231179  0.241379  0.000000  0.676923  \n",
+       "4  0.231359  0.393036  0.327586  0.014423  0.430769  "
       ]
      },
-     "execution_count": 254,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2012,16 +2012,6 @@
     "# defining the api-endpoint  \n",
     "API_ENDPOINT = \"http://127.0.0.1:3000/model\"\n",
     "  \n",
-    "# your API key here \n",
-    "API_KEY = \"XXXXXXXXXXXXXXXXX\"\n",
-    "  \n",
-    "# your source code here \n",
-    "source_code = ''' \n",
-    "print(\"Hello, world!\") \n",
-    "a = 1 \n",
-    "b = 2 \n",
-    "print(a + b) \n",
-    "'''\n",
     "df_to_dict_data = X_test.sample(5).to_dict(orient='list')\n",
     "post_data = {'dataset ID': \"makis\", 'date start': \"1\", 'date end': \"2\", 'payload': df_to_dict_data}\n",
     "\n",
@@ -2036,6 +2026,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sbp': [0.22413793103448276,\n",
+       "  0.1724137931034483,\n",
+       "  0.8965517241379309,\n",
+       "  0.2413793103448275,\n",
+       "  0.3275862068965517],\n",
+       " 'tobacco': [0.0233974358974359,\n",
+       "  0.12820512820512822,\n",
+       "  0.0,\n",
+       "  0.0,\n",
+       "  0.014423076923076926],\n",
+       " 'ldl': [0.20836236933797908,\n",
+       "  0.2968641114982578,\n",
+       "  0.22229965156794423,\n",
+       "  0.05853658536585367,\n",
+       "  0.23135888501742158],\n",
+       " 'adiposity': [0.42688821752265854,\n",
+       "  0.5589123867069485,\n",
+       "  0.7202416918429002,\n",
+       "  0.03202416918429002,\n",
+       "  0.45135951661631407],\n",
+       " 'typea': [0.6307692307692307,\n",
+       "  0.4923076923076923,\n",
+       "  0.8615384615384616,\n",
+       "  0.676923076923077,\n",
+       "  0.43076923076923074],\n",
+       " 'obesity': [0.2857590966122961,\n",
+       "  0.37076537013801764,\n",
+       "  0.3971141781681305,\n",
+       "  0.2311794228356337,\n",
+       "  0.39303638644918454],\n",
+       " 'alcohol': [0.13044364426931176,\n",
+       "  0.0,\n",
+       "  0.041918608601127796,\n",
+       "  0.013995515999728243,\n",
+       "  0.06848291324138868],\n",
+       " 'age': [1.0,\n",
+       "  0.9387755102040816,\n",
+       "  0.7142857142857144,\n",
+       "  0.04081632653061229,\n",
+       "  0.46938775510204084],\n",
+       " 'Absent': [1, 0, 1, 1, 1],\n",
+       " 'Present': [0, 1, 0, 0, 0]}"
+      ]
+     },
+     "execution_count": 299,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_to_dict_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
    "outputs": [],
@@ -2044,6 +2095,87 @@
     "#post_data = {'dataset ID': \"makis\", 'date start': \"1\", 'date end': \"2\", 'payload': dataset}\n",
     "#url = \"http://localhost:8081/upload_dataset\"\n",
     "#r = requests.post(url, json=post_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary = {'sbp': [0.17],\n",
+    " 'tobacco': [0.1],\n",
+    " 'ldl': [0.18],\n",
+    " 'adiposity': [0.4],\n",
+    " 'typea': [0.4],\n",
+    " 'obesity': [0.20],\n",
+    " 'alcohol': [0.24],\n",
+    " 'age': [0.87],\n",
+    " 'Absent': [0.0],\n",
+    " 'Present': [1.0]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predito</th>\n",
+       "      <th>Probabilidade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.684</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Predito  Probabilidade\n",
+       "0        1          0.684"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"http://127.0.0.1:3000/model\"\n",
+    "post_data = {'data_set ID': '1', 'payload':dictionary}\n",
+    "r = requests.post(url = url, json = post_data)\n",
+    "df = r.json()\n",
+    "pd.DataFrame(df)\n",
+    "url = \"http://127.0.0.1:3000/model\"\n",
+    "post_data = {'dataset ID': \"makis\", 'date start': \"1\", 'date end': \"2\", 'payload': dictionary}\n",
+    "r = requests.post(url = url, json = post_data)\n",
+    "df = r.json()\n",
+    "pd.DataFrame(df)"
    ]
   },
   {
