--- a/savio_regressao_logistica.ipynb
+++ b/savio_regressao_logistica.ipynb
@@ -2117,50 +2117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Predito</th>\n",
-       "      <th>Probabilidade</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.684</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Predito  Probabilidade\n",
-       "0        1          0.684"
+       "dict"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2173,7 +2139,48 @@
     "pd.DataFrame(df)\n",
     "url = \"http://127.0.0.1:3000/model\"\n",
     "post_data = {'dataset ID': \"makis\", 'date start': \"1\", 'date end': \"2\", 'payload': dictionary}\n",
-    "r = requests.post(url = url, json = post_data)\n",
+    "\n",
+    "type(post_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "post_data = json.dumps(post_data)\n",
+    "type(post_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-322-5c16f23b4ba7>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-322-5c16f23b4ba7>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    r = requests.post(url = url, post_data)\u001b[0m\n\u001b[0m                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.post(url = url, post_data)\n",
     "df = r.json()\n",
     "pd.DataFrame(df)"
    ]
