--- a/03_Machine_Learning/01_savio_analise_de_residuos.ipynb
+++ b/03_Machine_Learning/01_savio_analise_de_residuos.ipynb
@@ -364,10 +364,10 @@
     "        * A segunda solucao seria classifiar os dados em quatro partes, verificar, pegar uma amostra do 1 e 2 quartis que sejam do tamanho aproximado do tamanho dos dados do 3 e 4 quartis.  \n",
     "2. Normalidade dos Dados  \n",
     "    * Espera-se que a distribuicao do erro ao longo de X esteja em torno de 0 (NORMALIZAR DADOS)(Conforme grafico abaixo Residuals vs Fitted), porem no grafico acima ha valores concentrados de erros muito acima. Verifica-se que o modelo erra muito para valores entre 22.5 e 25 e entre 10 e 15.  \n",
-    "    ![optional caption text](figures/lm.png)  \n",
+    "        ![optional caption text](00_figuras/lm.png)  \n",
     "    * A figura abaixo mostra no segundo grafico QQ (Quantil/Quantil) abaixo que o ERRO nao corresponde a uma distribuicao normal  \n",
     "    * A distribuicao do ERRO deve ser NORMAL, entretanto os dados originais podem se enquadrar em qualquer distribuicao.\n",
-    "    ![](figures/lm2.png)  \n",
+    "    ![](00_figuras/lm2.png)  \n",
     "      \n",
     "    A “good” residuals vs. fitted plot should be relatively shapeless without clear patterns in the data, no obvious outliers, and be generally symmetrically distributed around the 0 line without particularly large residuals.  \n",
     "    https://medium.com/data-distilled/residual-plots-part-1-residuals-vs-fitted-plot-f069849616b1  \n",
@@ -928,7 +928,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
